--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://mathias:mathias123@nashor.5gw8xwi.mongodb.net/?appName=nashor
+MONGO_URI=mongodb+srv://nashor:ghokfU7Hn2X6D4cT@nashor.99zsl9x.mongodb.net/nashor-db?retryWrites=true&w=majority
+JWT_SECRET=chave-secreta-super-forte-para-jwt-2024-nashor-backend
