--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "dotenv": "^16.4.5"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "validator": "^13.15.22"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
