--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://nashor:ghokfU7Hn2X6D4cT@nashor.99zsl9x.mongodb.net/nashor-db?retryWrites=true&w=majority
 JWT_SECRET=chave-secreta-super-forte-para-jwt-2024-nashor-backend
+
+mongodb+srv://nashor:<db_password>@nashor.99zsl9x.mongodb.net/?appName=nashor
